--- a/Projeto-Instagram/style.css
+++ b/Projeto-Instagram/style.css
@@ -80,7 +80,7 @@ body{
     background-color: #0095f6;
     color: #ffffff;
     padding: 8px;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .instagram-sair{
@@ -111,6 +111,8 @@ body{
     justify-content: space-evenly;
     align-items: center;
     padding: 1rem;
+    background-color: #c0c0c0;
+    margin-top: 4px;
 }
 
 .download-botoes{
@@ -140,11 +142,27 @@ body{
         width: 90%;
     }
 
+    .group:nth-child(1){
+        margin-bottom: 8px;
+    }
+
     .instagram-celular{
         display: none;
     }
 
     .instagram-continue{
         width: 100%;
+    }
+
+    .botoes-baixe{
+        display: grid;
+    }
+
+    .download-botoes{
+        border-radius: 15px;
+    }
+
+    .download-botoes:nth-child(2){
+        margin-top: 5px;
     }
 }
