--- a/Projeto-Instagram/style.css
+++ b/Projeto-Instagram/style.css
@@ -30,6 +30,7 @@ body{
     align-items: center;
     justify-content: center;
     width: 50%;
+    margin-right: 20px;
 }
 
 .instagram-celular img{
